# glusterfs-auto-tier

./: README.md
xlators/cluster/vs/: README.md
xlators/cluster/vs/src/: Makefile.am  README.md  vs.c  vs.h
xlators/mgmt/tier/: README.md
